# resumeclaw

./: .gitignore  Cargo.toml  README.md
dev/: mock-llm-script.example.json
dev/template/: resume.tex
src/: agent.rs  mailer.rs  main.rs  proxy.rs  workspace.rs
src/channel/: cli.rs  discord.rs  manager.rs  mod.rs
src/llm/: anthropic.rs  mock.rs  mod.rs  openai_compat.rs  provider.rs
src/tools/: email.rs  mod.rs  resume.rs
templates/default/: linespacing_fix.sty  resume-zh_CN.tex  resume.cls  resume.tex  zh_CN-fonts.sty
tests/: cargo_dist.rs  local_integration.rs
